Added the landing page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="col-md-6 col-12 profile">
         <div class="card">
           <img
-            src="/images/profileimage.jpeg"
+            src="./images/profileimage.jpeg"
             width="80"
             height="80"
             class="profileimage"
@@ -73,7 +73,7 @@
     <main class="projects-container">
       <section class="projectcard" data-aos="fade-in">
         <img
-          src="/images/AI.svg "
+          src="./images/AI.svg "
           alt="Card image notes"
           class="project-image"
         />
@@ -89,7 +89,7 @@
       </section>
       <section class="projectcard" data-aos="fade-in">
         <img
-          src="/images/Exercise.svg "
+          src="./images/Exercise.svg "
           alt="Card image notes"
           class="project-image"
         />
@@ -105,7 +105,7 @@
       </section>
       <section class="projectcard" data-aos="fade-in">
         <img
-          src="/images/Notes.svg "
+          src="./images/Notes.svg "
           alt="Card image notes"
           class="project-image"
         />
