Added the landing page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="circle2 d-md-block d-none"></div>
     </header>
     <main class="projects-container">
-      <section class="projectcard" data-aos="fade-in">
+      <section class="projectcard" data-aos="fade-left">
         <img
           src="./images/AI.svg "
           alt="Card image notes"
@@ -87,7 +87,7 @@
           >
         </div>
       </section>
-      <section class="projectcard" data-aos="fade-in">
+      <section class="projectcard" data-aos="fade-right">
         <img
           src="./images/Exercise.svg "
           alt="Card image notes"
@@ -103,7 +103,7 @@
           >
         </div>
       </section>
-      <section class="projectcard" data-aos="fade-in">
+      <section class="projectcard" data-aos="fade-left">
         <img
           src="./images/Notes.svg "
           alt="Card image notes"
