--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="#">"Kiran Mahajan"</a>
+      <a class="navbar-brand" href="#">Kiran Mahajan</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -32,7 +32,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav d-flex justify-content-center align-items-center">
           <li class="nav-item">
             <a class="nav-link" href="#">Home</a>
           </li>
@@ -46,24 +46,7 @@
       </div>
     </nav>
 
-    <div class="row main-container">
-      <div class="col-md-6 col-12 info text mt-10 text">
-        <div class="text">I create <span class="name"></span></div>
-      </div>
-      <div class="col-md-6 col-12 profile">
-        <div class="card">
-          <img
-            src="./images/profileimage.jpeg"
-            width="80"
-            height="80"
-            class="profileimage"
-            alt="profileimage"
-          />
-          <div class="heading">Developer</div>
-          <h3 class="aboutme">About me</h3>
-        </div>
-      </div>
-    </div>
+    <div class="row main-container"></div>
 
     <header class="main-projects">
       <h1><span>Projects</span></h1>
