--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="#">Kiran Mahajan</a>
+      <a class="navbar-brand" href="#"></a>
       <button
         class="navbar-toggler"
         type="button"
@@ -37,6 +37,9 @@
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#">Education</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">Projects</a>
           </li>
           <li class="nav-item">
@@ -45,8 +48,18 @@
         </ul>
       </div>
     </nav>
+  
+    <div class="main-container">
+      <div class="portfolio-content" data-aos="fade-in">
+        <h1>Hi,I am Kiran Mahajan</h1>
+        <h3>I create Websites/UI and UX Designs</h3>
+      </div>
+      <div class="portfolio-image" data-aos="fade-in">
+        <img src="./images/landingpagesvg.svg" alt="landingsvg" />
+      </div>
+    
 
-    <div class="row main-container"></div>
+  </div>
 
     <header class="main-projects">
       <h1><span>Projects</span></h1>
@@ -54,7 +67,7 @@
       <div class="circle2 d-md-block d-none"></div>
     </header>
     <main class="projects-container">
-      <section class="projectcard" data-aos="fade-left">
+      <section class="projectcard" data-aos="fade-in">
         <img
           src="./images/AI.svg "
           alt="Card image notes"
@@ -70,7 +83,7 @@
           >
         </div>
       </section>
-      <section class="projectcard" data-aos="fade-right">
+      <section class="projectcard" data-aos="fade-in">
         <img
           src="./images/Exercise.svg "
           alt="Card image notes"
@@ -86,7 +99,7 @@
           >
         </div>
       </section>
-      <section class="projectcard" data-aos="fade-left">
+      <section class="projectcard" data-aos="fade-in">
         <img
           src="./images/Notes.svg "
           alt="Card image notes"
