--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h1>Hi,I am Kiran Mahajan</h1>
         <h3>I create Websites/UI and UX Designs</h3>
       </div>
-      <div class="portfolio-image" data-aos="fade-in">
+      <div class="portfolio-image" data-aos="fade-out">
         <img src="./images/landingpagesvg.svg" alt="landingsvg" />
       </div>
     
