--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </nav>
   
     <div class="main-container">
-      <div class="portfolio-content" data-aos="fade-in">
+      <div class="portfolio-content" data-aos="fade-out">
         <h1>Hi,I am Kiran Mahajan</h1>
         <h3>I create Websites/UI and UX Designs</h3>
       </div>
