--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <link rel="stylesheet" href="index.css" type="text/css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="circlemain"></div>
+    <nav class="navbar navbar-expand-lg navbar-light" data-aos="fade-down">
       <a class="navbar-brand" href="#"></a>
       <button
         class="navbar-toggler"
@@ -40,7 +41,7 @@
             <a class="nav-link" href="#">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="#main-projects">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
@@ -52,7 +53,7 @@
     <div class="main-container">
       <div class="portfolio-content" data-aos="fade-out">
         <h1>Hi,I am Kiran Mahajan</h1>
-        <h3>I create Websites/UI and UX Designs</h3>
+        <h3>I create Websites, UI and Designs</h3>
       </div>
       <div class="portfolio-image" data-aos="fade-out">
         <img src="./images/landingpagesvg.svg" alt="landingsvg" />
@@ -61,7 +62,7 @@
 
   </div>
 
-    <header class="main-projects">
+    <header class="main-projects" id="main-projects">
       <h1><span>Projects</span></h1>
       <div class="circle1 d-md-block d-none" data-aos="fade-in"></div>
       <div class="circle2 d-md-block d-none" data-aos="fade-in"></div>
