--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
     <header class="main-projects" id="main-projects">
       <h1><span>Projects</span></h1>
-      <div class="circle1 d-md-block d-none" data-aos="fade-in"></div>
-      <div class="circle2 d-md-block d-none" data-aos="fade-in"></div>
+      <div class="circle1 d-md-block d-none" ></div>
+      <div class="circle2 d-md-block d-none" ></div>
     </header>
     <main class="projects-container">
       <section class="projectcard" data-aos="fade-in">
