--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     </nav>
   
     <div class="main-container">
-      <div class="portfolio-content" data-aos="fade-out">
-        <h1>Hi,I am Kiran Mahajan</h1>
-        <h3>I create Websites, UI and Designs</h3>
+      <div class="portfolio-content">
+        <h1>Hi , I am Kiran Mahajan</h1>
+        <h3>I create Websites, UI and UX Designs</h3>
       </div>
       <div class="portfolio-image" data-aos="fade-out">
         <img src="./images/landingpagesvg.svg" alt="landingsvg" />
