--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   
     <div class="main-container">
       <div class="portfolio-content">
-        <h1>Hi , I am Kiran Mahajan</h1>
+        <h1>Hi , I am  Kiran Mahajan</h1>
         <h3>I create Websites, UI and UX Designs</h3>
       </div>
       <div class="portfolio-image" data-aos="fade-out">
@@ -86,7 +86,7 @@
       </section>
       <section class="projectcard" data-aos="fade-in">
         <img
-          src="./images/Exercise.svg "
+          src="./images/exerciseimage.svg "
           alt="Card image notes"
           class="project-image"
         />
@@ -102,7 +102,7 @@
       </section>
       <section class="projectcard" data-aos="fade-in">
         <img
-          src="./images/Notes.svg "
+          src="./images/Notes1.svg "
           alt="Card image notes"
           class="project-image"
         />
