--- a/index.html
+++ b/index.html
@@ -49,23 +49,29 @@
         </ul>
       </div>
     </nav>
-  
+
     <div class="main-container">
       <div class="portfolio-content">
-        <h1>Hi , I am  Kiran Mahajan</h1>
+        <h1>Hi , I am Kiran Mahajan</h1>
         <h3>I create Websites, UI and UX Designs</h3>
       </div>
-      <div class="portfolio-image" data-aos="fade-out">
-        <img src="./images/landingpagesvg.svg" alt="landingsvg" />
+      <div class="portfolio-image">
+        <!-- <img src="./images/landingpagesvg.svg" alt="landingsvg" /> -->
+        <lottie-player
+          src="https://assets3.lottiefiles.com/packages/lf20_Ckw3Ws.json"
+          mode="bounce"
+          background="#000000"
+          speed="1"
+          loop
+          autoplay
+        ></lottie-player>
       </div>
-    
-
-  </div>
+    </div>
 
     <header class="main-projects" id="main-projects">
       <h1><span>Projects</span></h1>
-      <div class="circle1 d-md-block d-none" ></div>
-      <div class="circle2 d-md-block d-none" ></div>
+      <div class="circle1 d-md-block d-none"></div>
+      <div class="circle2 d-md-block d-none"></div>
     </header>
     <main class="projects-container">
       <section class="projectcard" data-aos="fade-in">
@@ -135,6 +141,7 @@
     ></script>
 
     <script src="typewriter.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
