Changed project ideas

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
         <h3>I create Websites, UI and UX Designs</h3>
       </div>
       <div class="portfolio-image">
-        <!-- <img src="./images/landingpagesvg.svg" alt="landingsvg" /> -->
-        <lottie-player
+        <img src="./images/landingpagesvg.svg" alt="landingsvg" />
+        <!-- <lottie-player
           src="https://assets3.lottiefiles.com/packages/lf20_Ckw3Ws.json"
           mode="bounce"
           background="#000000"
           speed="1"
           loop
           autoplay
-        ></lottie-player>
+        ></lottie-player> -->
       </div>
     </div>
 
@@ -76,36 +76,21 @@
     <main class="projects-container">
       <section class="projectcard" data-aos="fade-in">
         <img
-          src="./images/AI.svg "
+          src="./images/fee_mgmt_pic.svg "
           alt="Card image notes"
           class="project-image"
         />
         <div>
-          <h3>AI controlled News App</h3>
-          <p>Tech Stack : Alan AI,React</p>
-          <a href="https://github.com/mahajankiran/Notes-App">
+          <h3>Fee Management App</h3>
+          <p>Tech Stack :Nodejs,Express,EJS,CSS</p>
+          <a href="https://github.com/mahajankiran/fee_module">
             <button class="btn-git">
               <i class="fa fa-github"></i> Github
             </button></a
           >
         </div>
       </section>
-      <section class="projectcard" data-aos="fade-in">
-        <img
-          src="./images/exerciseimage.svg "
-          alt="Card image notes"
-          class="project-image"
-        />
-        <div>
-          <h3>Exercise Tracker</h3>
-          <p>Tech Stack : React , Express ,MongoDB</p>
-          <a href="https://github.com/mahajankiran/Notes-App">
-            <button class="btn-git">
-              <i class="fa fa-github"></i> Github
-            </button></a
-          >
-        </div>
-      </section>
+     
       <section class="projectcard" data-aos="fade-in">
         <img
           src="./images/Notes1.svg "
@@ -123,6 +108,7 @@
         </div>
       </section>
     </main>
+    <main class="education"></main>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
