--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           alt="Card image notes"
           class="project-image"
         />
-        <div>
+        <div class="project-content">
           <h3>Fee Management App</h3>
           <p>Tech Stack :Nodejs,Express,EJS,CSS</p>
           <a href="https://github.com/mahajankiran/fee_module">
@@ -92,12 +92,14 @@
       </section>
      
       <section class="projectcard" data-aos="fade-in">
+        <div>
         <img
-          src="./images/Notes1.svg "
+          src="./images/Notes.svg "
           alt="Card image notes"
           class="project-image"
         />
-        <div>
+      </div>
+        <div class="project-content">
           <h3>Notes App</h3>
           <p>Tech Stack : Javascript , CSS ,Bootstrap ,HTML</p>
           <a href="https://github.com/mahajankiran/Notes-App">
