Changed background color

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         />
         <div class="project-content">
           <h3>Fee Management App</h3>
-          <p>Tech Stack :Nodejs,Express,EJS,CSS</p>
+          <p>Tech Stack:</p>
+            <p> <span class="tech-stack">Nodejs</span><span class="tech-stack">Express</span><span class="tech-stack">MySQL</span><span class="tech-stack">HTML/CSS</span><span class="tech-stack">EJS</span></p>
           <a href="https://github.com/mahajankiran/fee_module">
             <button class="btn-git">
               <i class="fa fa-github"></i> Github
@@ -101,7 +102,9 @@
       </div>
         <div class="project-content">
           <h3>Notes App</h3>
-          <p>Tech Stack : Javascript , CSS ,Bootstrap ,HTML</p>
+          <p>Tech Stack:</p>
+          <p> <span class="tech-stack">Nodejs</span><span class="tech-stack">Express</span><span class="tech-stack">MySQL</span><span class="tech-stack">HTML/CSS</span><span class="tech-stack">EJS</span></p>
+
           <a href="https://github.com/mahajankiran/Notes-App">
             <button class="btn-git">
               <i class="fa fa-github"></i> Github
