--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="education.html">Education</a>
+            <a class="nav-link" href="#">Education</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="projects.html">Projects</a>
@@ -50,26 +50,6 @@
       </div>
     </nav>
 
-    <div class="main-container">
-      <div class="portfolio-content">
-        <h1>Hi , I am Kiran Mahajan</h1>
-        <h3>I create Websites, UI and UX Designs</h3>
-      </div>
-      <div class="portfolio-image">
-        <img src="./images/landingpagesvg.svg" alt="landingsvg" />
-        <!-- <lottie-player
-          src="https://assets3.lottiefiles.com/packages/lf20_Ckw3Ws.json"
-          mode="bounce"
-          background="#000000"
-          speed="1"
-          loop
-          autoplay
-        ></lottie-player> -->
-      </div>
-    </div>
-
-   
-    <main class="education"></main>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
