Designed contact page

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <script
+      src="https://kit.fontawesome.com/79deda6cc6.js"
+      crossorigin="anonymous"
+    ></script>
+
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
       rel="stylesheet"
@@ -15,7 +20,7 @@
       src="https://kit.fontawesome.com/79deda6cc6.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="index.css" type="text/css" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
     <div class="circlemain"></div>
@@ -49,7 +54,56 @@
         </ul>
       </div>
     </nav>
-
+    <div class="maindiv">
+      <div class="container mt-5">
+        <div class="row">
+          <div
+            class="col-sm-12 col-md-6 col-lg-6 d-flex justify-content-center align-items-center"
+          >
+            <img
+              style="
+                width: 200px;
+                height: 200px;
+                border-radius: 50%;
+                transform: rotate(180deg);
+              "
+              src="images/profileimage.jpeg"
+            />
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-6 mt-5">
+            <blockquote class="blockquote">
+              <p class="mb-0" style="color: #495488">
+                It's much easier to double your business by doubling your
+                coversation rate than by doubling your traffic.
+              </p>
+              <footer class="blockquote-footer">Jeff Eisenberg</footer>
+            </blockquote>
+          </div>
+        </div>
+      </div>
+      <h4 class="mt-5 text-center">Contact me </h4>
+      <div class="container mt-5">
+        <div class="row">
+          <div
+            class="col-lg-4 col-sm-12 col-md-4 m-7 d-flex justify-content-center align-items-center"
+          >
+            <i class="fa-brands fa fa-linkedin"></i>
+          </div>
+          <div
+            class="col-lg-4 m-7  col-md-4 col-sm-12  d-flex justify-content-center align-items-center"
+          >
+            <i class="fa-brands fa fa-linkedin"></i>
+          </div>
+          <div
+            class="col-lg-4 m-7  col-md-4 col-sm-12  d-flex justify-content-center align-items-center"
+          >
+            <i
+              class="fa-brands fa fa-linkedin"
+            ></i>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
