--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       src="https://kit.fontawesome.com/79deda6cc6.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="index.css" type="text/css" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
     <div class="circlemain"></div>
