--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
           </div>
           <div class="col-sm-12 col-md-6 col-lg-6 mt-5">
             <blockquote class="blockquote">
-              <p class="mb-0" style="color: #495488">
+              <p class="mb-0" style="color: #495488 ;font-size: 18px;">
                 It's much easier to double your business by doubling your
                 coversation rate than by doubling your traffic.
               </p>
@@ -81,25 +81,23 @@
           </div>
         </div>
       </div>
-      <h4 class="mt-5 text-center">Contact me </h4>
+      <h2 class="mt-5 text-center contact-header">Contact me</h2>
       <div class="container mt-5">
         <div class="row">
           <div
             class="col-lg-4 col-sm-12 col-md-4 m-7 d-flex justify-content-center align-items-center"
           >
-            <i class="fa-brands fa fa-linkedin"></i>
+           <a href="https://www.linkedin.com/in/mahajankiran020" target="_blank"> <i class="fa-brands fa fa-linkedin"></i></a>
           </div>
           <div
-            class="col-lg-4 m-7  col-md-4 col-sm-12  d-flex justify-content-center align-items-center"
+            class="col-lg-4 m-7 col-md-4 col-sm-12 d-flex justify-content-center align-items-center"
           >
-            <i class="fa-brands fa fa-linkedin"></i>
+            <a href="mailto:mahajankiran020@gmail.com" target="_blank"> <i class="fa-brands fa fa-envelope"></i></a>
           </div>
           <div
-            class="col-lg-4 m-7  col-md-4 col-sm-12  d-flex justify-content-center align-items-center"
+            class="col-lg-4 m-7 col-md-4 col-sm-12 d-flex justify-content-center align-items-center"
           >
-            <i
-              class="fa-brands fa fa-linkedin"
-            ></i>
+          <a href="https://github.com/mahajankiran" target="_blank"> <i class="fa-brands fa fa-github"></i></a>
           </div>
         </div>
       </div>
