--- a/contact.html
+++ b/contact.html
@@ -85,17 +85,17 @@
       <div class="container mt-5">
         <div class="row">
           <div
-            class="col-lg-4 col-sm-12 col-md-4 m-7 d-flex justify-content-center align-items-center"
+            class=" col-sm-4  col-xs-4 col-lg-4 col-md-4 m-7 d-flex justify-content-center align-items-center"
           >
            <a href="https://www.linkedin.com/in/mahajankiran020" target="_blank"> <i class="fa-brands fa fa-linkedin"></i></a>
           </div>
           <div
-            class="col-lg-4 m-7 col-md-4 col-sm-12 d-flex justify-content-center align-items-center"
+            class=" col-sm-4 col-xs-4 col-md-4 col-lg-4 d-flex justify-content-center align-items-center"
           >
             <a href="mailto:mahajankiran020@gmail.com" target="_blank"> <i class="fa-brands fa fa-envelope"></i></a>
           </div>
           <div
-            class="col-lg-4 m-7 col-md-4 col-sm-12 d-flex justify-content-center align-items-center"
+            class=" col-sm-4 col-xs-4 col-lg-4  col-md-4 col-xs-4 d-flex justify-content-center align-items-center"
           >
           <a href="https://github.com/mahajankiran" target="_blank"> <i class="fa-brands fa fa-github"></i></a>
           </div>
