Added responsivness for contact

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
-    <div class="circlemain"></div>
     <nav class="navbar navbar-expand-lg navbar-light" data-aos="fade-down">
       <a class="navbar-brand" href="#"></a>
       <button
@@ -49,6 +48,9 @@
         </ul>
       </div>
     </nav>
+    
+    <div class="circle1 d-md-block"></div>
+    <div class="circle2 d-md-block"></div>
 
     <div class="main-container">
       <div class="portfolio-content">
@@ -57,18 +59,8 @@
       </div>
       <div class="portfolio-image">
         <img src="./images/landingpagesvg.svg" alt="landingsvg" />
-        <!-- <lottie-player
-          src="https://assets3.lottiefiles.com/packages/lf20_Ckw3Ws.json"
-          mode="bounce"
-          background="#000000"
-          speed="1"
-          loop
-          autoplay
-        ></lottie-player> -->
       </div>
     </div>
-
-   
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -86,7 +78,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="typewriter.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
