--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
-    <div class="circlemain"></div>
     <nav class="navbar navbar-expand-lg navbar-light" data-aos="fade-down">
       <a class="navbar-brand" href="#"></a>
       <button
@@ -49,12 +48,13 @@
         </ul>
       </div>
     </nav>
+    
+    <div class="circle1 d-md-block "></div>
+    
 
    
     <header class="main-projects" id="main-projects">
         <h1><span>Projects</span></h1>
-        <div class="circle1 d-md-block d-none"></div>
-        <div class="circle2 d-md-block d-none"></div>
       </header>
       <main class="projects-container">
         <section class="projectcard">
@@ -137,7 +137,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="typewriter.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
