--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,6 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
-    <div class="circlemain"></div>
     <nav class="navbar navbar-expand-lg navbar-light" data-aos="fade-down">
       <a class="navbar-brand" href="#"></a>
       <button
@@ -54,8 +53,11 @@
         </ul>
       </div>
     </nav>
+    
+    <div class="circle1 d-md-block"></div>
+    <div class="circle2 d-md-block"></div>
     <div class="maindiv">
-      <div class="container mt-5">
+      <div class="container mt-5 ">
         <div class="row">
           <div
             class="col-sm-12 col-md-6 col-lg-6 d-flex justify-content-center align-items-center"
@@ -85,19 +87,19 @@
       <div class="container mt-5">
         <div class="row">
           <div
-            class=" col-sm-4  col-xs-4 col-lg-4 col-md-4 m-7 d-flex justify-content-center align-items-center"
+            class=" col-sm-4  col-xs-4 col-md-4  d-flex justify-content-center align-items-center"
           >
-           <a href="https://www.linkedin.com/in/mahajankiran020" target="_blank"> <i class="fa-brands fa fa-linkedin"></i></a>
+           <a href="https://www.linkedin.com/in/mahajankiran020" target="_blank"> <i class="contact-icons fa-brands fa fa-linkedin"></i></a>
           </div>
           <div
             class=" col-sm-4 col-xs-4 col-md-4 col-lg-4 d-flex justify-content-center align-items-center"
           >
-            <a href="mailto:mahajankiran020@gmail.com" target="_blank"> <i class="fa-brands fa fa-envelope"></i></a>
+            <a href="mailto:mahajankiran020@gmail.com" target="_blank"> <i class="fa-brands contact-icons fa fa-envelope"></i></a>
           </div>
           <div
-            class=" col-sm-4 col-xs-4 col-lg-4  col-md-4 col-xs-4 d-flex justify-content-center align-items-center"
+            class=" col-sm-4 col-xs-4 col-lg-4  col-md-4 col-xs-4 d-flex justify-content-center  align-items-center"
           >
-          <a href="https://github.com/mahajankiran" target="_blank"> <i class="fa-brands fa fa-github"></i></a>
+          <a href="https://github.com/mahajankiran" target="_blank"> <i class="contact-icons fa-brands fa fa-github"></i></a>
           </div>
         </div>
       </div>
@@ -119,7 +121,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="typewriter.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
