Added download resume button to home page

--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
         </ul>
       </div>
     </nav>
-    
+
     <div class="circle1 d-md-block"></div>
-    <div class="circle2 d-md-block"></div>
 
     <div class="main-container">
       <div class="portfolio-content">
@@ -59,6 +58,25 @@
       </div>
       <div class="portfolio-image">
         <img src="./images/landingpagesvg.svg" alt="landingsvg" />
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div
+          class="mb-3 col-sm-12 d-flex justify-content-center align-items-center"
+        >
+          <h3 class="header">Download my resume</h3>
+        </div>
+
+        <div
+          class="mb-3 col-sm-12 d-flex justify-content-center align-items-center"
+        >
+          <a
+            href="https://drive.google.com/file/d/1ufaf-qVHWcudy5ucKOS7rLNwzx4HLDfu/view?usp=sharing"
+            target="_blank"
+            ><i class="fa-solid fa contact-icons fa-download"></i
+          ></a>
+        </div>
       </div>
     </div>
 
