--- a/contact.html
+++ b/contact.html
@@ -53,11 +53,10 @@
         </ul>
       </div>
     </nav>
-    
+
     <div class="circle1 d-md-block"></div>
-    <div class="circle2 d-md-block"></div>
     <div class="maindiv">
-      <div class="container mt-5 ">
+      <div class="container mt-5">
         <div class="row">
           <div
             class="col-sm-12 col-md-6 col-lg-6 d-flex justify-content-center align-items-center"
@@ -74,7 +73,7 @@
           </div>
           <div class="col-sm-12 col-md-6 col-lg-6 mt-5">
             <blockquote class="blockquote">
-              <p class="mb-0" style="color: #495488 ;font-size: 18px;">
+              <p class="mb-0" style="color: #495488; font-size: 18px">
                 It's much easier to double your business by doubling your
                 coversation rate than by doubling your traffic.
               </p>
@@ -83,24 +82,31 @@
           </div>
         </div>
       </div>
-      <h2 class="mt-5 text-center contact-header">Contact me</h2>
-      <div class="container mt-5">
-        <div class="row">
-          <div
-            class=" col-sm-4  col-xs-4 col-md-4  d-flex justify-content-center align-items-center"
-          >
-           <a href="https://www.linkedin.com/in/mahajankiran020" target="_blank"> <i class="contact-icons fa-brands fa fa-linkedin"></i></a>
-          </div>
-          <div
-            class=" col-sm-4 col-xs-4 col-md-4 col-lg-4 d-flex justify-content-center align-items-center"
-          >
-            <a href="mailto:mahajankiran020@gmail.com" target="_blank"> <i class="fa-brands contact-icons fa fa-envelope"></i></a>
-          </div>
-          <div
-            class=" col-sm-4 col-xs-4 col-lg-4  col-md-4 col-xs-4 d-flex justify-content-center  align-items-center"
-          >
-          <a href="https://github.com/mahajankiran" target="_blank"> <i class="contact-icons fa-brands fa fa-github"></i></a>
-          </div>
+    </div>
+    <h2 class="mt-5 text-center header">Contact me</h2>
+    <div
+      class="container d-flex align-items-center justify-content-center"
+    >
+      <div class="row mt-5">
+        <div class=" col-sm-3 d-flex justify-content-center align-items-center">
+          <a href="https://www.linkedin.com/in/mahajankiran020" target="_blank">
+            <i class="contact-icons fa-brands fa fa-linkedin"></i
+          ></a>
+        </div>
+        <div class=" col-sm-3 d-flex justify-content-center">
+          <a href="mailto:mahajankiran020@gmail.com" target="_blank">
+            <i class="fa-brands contact-icons fa fa-envelope"></i
+          ></a>
+        </div>
+        <div class=" col-sm-3 d-flex justify-content-center">
+          <a href="https://github.com/mahajankiran" target="_blank">
+            <i class="contact-icons fa-brands fa fa-github"></i
+          ></a>
+        </div>
+        <div class="col-sm-3 d-flex justify-content-center">
+          <a href="https://www.instagram.com/kiran.mahajan.28/" target="_blank">
+            <i class="contact-icons fa-brands fa fa-instagram"></i
+          ></a>
         </div>
       </div>
     </div>
