Added resume download feature on homepage

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Education</a>
+            <a class="nav-link" href="education.html">Education</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="projects.html">Projects</a>
@@ -67,6 +67,7 @@
                 height: 200px;
                 border-radius: 50%;
                 transform: rotate(180deg);
+                border:solid 3px #c471ed;
               "
               src="images/profileimage.jpeg"
             />
