--- a/education.html
+++ b/education.html
@@ -48,35 +48,12 @@
         </ul>
       </div>
     </nav>
+    
+    <div class="circle1 d-md-block "></div>
+    
 
-    <div class="circle1 d-md-block"></div>
-
-    <div class="main-container">
-      <div class="portfolio-content">
-        <h1>Hi , I am Kiran Mahajan</h1>
-        <h3>I create Websites, UI and UX Designs</h3>
-      </div>
-      <div class="portfolio-image">
-        <img src="./images/landingpagesvg.svg" alt="landingsvg" />
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div
-          class="mb-3 col-sm-12 d-flex justify-content-center align-items-center"
-        >
-          <h3 class="header">Download my resume</h3>
-        </div>
-
-        <div
-          class="mb-3 col-sm-12 d-flex justify-content-center align-items-center"
-        >
-          <a href="resume/Kiran_Mahajan_Resume.pdf" download
-            ><i class="fa-solid fa download-icons fa-download"></i
-          ></a>
-        </div>
-      </div>
-    </div>
+   
+    <main class="education"></main>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
