--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Education</a>
+            <a class="nav-link" href="education.html">Education</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="projects.html">Projects</a>
