Fixed resposivness error for mobile devices

--- a/projects.html
+++ b/projects.html
@@ -118,8 +118,9 @@
         </section>
       </main>
 
+      <p class="text-center text-white  mb-3">Made with <i class="fa-solid  heart-icon fa fa-heart"></i> in <img src="images/india.png" style="height:17px;width:17px;margin:0 2px;"/></p>
+
    
-    <main class="education"></main>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
