--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                 height: 200px;
                 border-radius: 50%;
                 transform: rotate(180deg);
-                border:solid 3px #c471ed;
+                border: solid 3px #c471ed;
               "
               src="images/profileimage.jpeg"
             />
@@ -85,21 +85,19 @@
       </div>
     </div>
     <h2 class="mt-5 text-center header">Contact me</h2>
-    <div
-      class="container d-flex align-items-center justify-content-center"
-    >
+    <div class="container d-flex align-items-center justify-content-center">
       <div class="row mt-5">
-        <div class=" col-sm-3 d-flex justify-content-center align-items-center">
+        <div class="col-sm-3 d-flex justify-content-center align-items-center">
           <a href="https://www.linkedin.com/in/mahajankiran020" target="_blank">
             <i class="contact-icons fa-brands fa fa-linkedin"></i
           ></a>
         </div>
-        <div class=" col-sm-3 d-flex justify-content-center">
+        <div class="col-sm-3 d-flex justify-content-center">
           <a href="mailto:mahajankiran020@gmail.com" target="_blank">
             <i class="fa-brands contact-icons fa fa-envelope"></i
           ></a>
         </div>
-        <div class=" col-sm-3 d-flex justify-content-center">
+        <div class="col-sm-3 d-flex justify-content-center">
           <a href="https://github.com/mahajankiran" target="_blank">
             <i class="contact-icons fa-brands fa fa-github"></i
           ></a>
@@ -111,6 +109,13 @@
         </div>
       </div>
     </div>
+    <p class="text-center text-white mt-5 mb-3">
+      Made with <i class="fa-solid heart-icon fa fa-heart"></i> in
+      <img
+        src="images/india.png"
+        style="height: 17px; width: 17px; margin: 0 2px"
+      />
+    </p>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
