Added message box to contact page

--- a/contact.html
+++ b/contact.html
@@ -86,30 +86,48 @@
     </div>
     <h2 class="mt-5 text-center header">Contact me</h2>
     <div class="container d-flex align-items-center justify-content-center">
-      <div class="row mt-5">
-        <div class="col-sm-3 d-flex justify-content-center align-items-center">
-          <a href="https://www.linkedin.com/in/mahajankiran020" target="_blank">
-            <i class="contact-icons fa-brands fa fa-linkedin"></i
-          ></a>
+      <div class="row mt-3 d-flex justify-content-center align-items-center">
+        <div class="col-sm-12  d-flex justify-content-center align-items-center">
+          <ul class="contact-list">
+            <li>
+              <a
+                href="https://www.linkedin.com/in/mahajankiran020"
+                target="_blank"
+              >
+                <i class="icons fa-brands fa fa-linkedin"></i
+              ></a>
+            </li>
+
+            <li>
+              <a href="mailto:mahajankiran020@gmail.com" target="_blank">
+                <i class="fa-brands icons fa fa-envelope"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://github.com/mahajankiran" target="_blank">
+                <i class="icons fa-brands fa fa-github"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com/kiran.mahajan.28/"
+                target="_blank"
+              >
+                <i class=" icons fa-brands fa fa-instagram"></i
+              ></a>
+            </li>
+          </ul>
         </div>
-        <div class="col-sm-3 d-flex justify-content-center">
-          <a href="mailto:mahajankiran020@gmail.com" target="_blank">
-            <i class="fa-brands contact-icons fa fa-envelope"></i
-          ></a>
-        </div>
-        <div class="col-sm-3 d-flex justify-content-center">
-          <a href="https://github.com/mahajankiran" target="_blank">
-            <i class="contact-icons fa-brands fa fa-github"></i
-          ></a>
-        </div>
-        <div class="col-sm-3 d-flex justify-content-center">
-          <a href="https://www.instagram.com/kiran.mahajan.28/" target="_blank">
-            <i class="contact-icons fa-brands fa fa-instagram"></i
-          ></a>
+        <div class="col-sm-10 mt-3 d-flex justify-content-center align-items-center">
+          
+          <input  type="text" placeholder="Type your message here" />
+          <a><i class="fa-solid send-icon icons fa fa-arrow-right"></i></a>
+          
         </div>
       </div>
     </div>
-    <p class="text-center text-white mt-5 mb-3">
+
+    <p class="text-center text-white mt-4 ">
       Made with <i class="fa-solid heart-icon fa fa-heart"></i> in
       <img
         src="images/india.png"
