--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           class="mb-3 col-sm-12 d-flex justify-content-center align-items-center"
         >
           <a href="resume/Kiran_Mahajan_Resume.pdf" download
-            ><i class="fa-solid fa download-icons fa-download"></i
+            ><i class="fa-solid fa icons download-icons fa-download"></i
           ></a>
         </div>
       </div>
