Did some changes in CSS

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                 height: 200px;
                 border-radius: 50%;
                 transform: rotate(180deg);
-                border: solid 3px #c471ed;
+                border: solid 10px #b2d4dd;
               "
               src="images/profileimage.jpeg"
             />
@@ -94,18 +94,18 @@
                 href="https://www.linkedin.com/in/mahajankiran020"
                 target="_blank"
               >
-                <i class="icons fa-brands fa fa-linkedin"></i
+                <i class="icons  linkedin-icon fa-brands fa fa-linkedin"></i
               ></a>
             </li>
 
             <li>
               <a href="mailto:mahajankiran020@gmail.com" target="_blank">
-                <i class="fa-brands icons fa fa-envelope"></i
+                <i class="fa-brands mail-icon  icons fa fa-envelope"></i
               ></a>
             </li>
             <li>
               <a href="https://github.com/mahajankiran" target="_blank">
-                <i class="icons fa-brands fa fa-github"></i
+                <i class="icons  github-icon fa-brands fa fa-github"></i
               ></a>
             </li>
             <li>
@@ -113,12 +113,12 @@
                 href="https://www.instagram.com/kiran.mahajan.28/"
                 target="_blank"
               >
-                <i class=" icons fa-brands fa fa-instagram"></i
+                <i class=" icons instagram-icon fa-brands fa fa-instagram"></i
               ></a>
             </li>
           </ul>
         </div>
-        <div class="col-sm-10 mt-3 d-flex justify-content-center align-items-center">
+        <div class=" col-sm-10 mt-3 d-flex justify-content-center align-items-center ">
           
           <input  type="text" placeholder="Type your message here" />
           <a><i class="fa-solid send-icon icons fa fa-arrow-right"></i></a>
