--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light" data-aos="fade-down">
-      <a class="navbar-brand" href="#"></a>
+      <span  class="title" href="#">Kiran Mahajan</span>
       <button
         class="navbar-toggler"
         type="button"
@@ -65,7 +65,7 @@
         <div
           class="mb-3 col-sm-12 d-flex justify-content-center align-items-center"
         >
-          <h3 class="header">Download my resume</h3>
+          <h3 class="header">Download my Resume</h3>
         </div>
 
         <div
