Added title to navbar in all different sections

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
     <div class="main-container">
       <div class="portfolio-content">
-        <h1>Hi , I am Kiran Mahajan</h1>
-        <h3>I create Websites, UI and UX Designs</h3>
+        <h1>Hi , I am Kiran Mahajan.</h1>
+        <h3>I like creating Websites,UI Designs.</h3>
       </div>
       <div class="portfolio-image">
         <img src="./images/landingpagesvg.svg" alt="landingsvg" />
