--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light" data-aos="fade-down">
-      <a class="navbar-brand" href="#"></a>
+      <span  class="title" href="#">Kiran Mahajan</span>
       <button
         class="navbar-toggler"
         type="button"
