--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,8 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light" data-aos="fade-down">
-      <a class="navbar-brand" href="#"></a>
+      <span class="title" href="#">Kiran Mahajan</span>
+
       <button
         class="navbar-toggler"
         type="button"
