--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <div class="circle1 d-md-block"></div>
 
     <div class="main-container">
-      <div class="portfolio-content">
-        <h1>Hi , I am Kiran Mahajan.</h1>
+      <div class="portfolio-content ">
+        <h1>Hi<span class="hello-wave">👋</span>,I am Kiran Mahajan.</h1>
         <h3>I like creating Websites,UI Designs.</h3>
       </div>
       <div class="portfolio-image">
