Changed background color of projectcard component

--- a/projects.html
+++ b/projects.html
@@ -37,9 +37,7 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="education.html">Education</a>
-          </li>
+          
           <li class="nav-item">
             <a class="nav-link" href="projects.html">Projects</a>
           </li>
@@ -52,79 +50,94 @@
 
     <div class="circle1 d-md-block"></div>
 
-    <header class="main-projects" id="main-projects">
-      <h1><span>Projects</span></h1>
-    </header>
-    <main class="projects-container">
-      <section class="projectcard">
-        <img
-          src="./images/fee_mgmt_pic.svg "
-          alt="Card image notes"
-          class="project-image"
-        />
-        <div class="project-content">
-          <h3>Fee Management App</h3>
-          <p>Tech Stack:</p>
-          <p>
-            <span class="tech-stack">Nodejs</span
-            ><span class="tech-stack">Express</span
-            ><span class="tech-stack">MySQL</span
-            ><span class="tech-stack">HTML/CSS</span
-            ><span class="tech-stack">EJS</span>
-          </p>
-          <a href="https://github.com/mahajankiran/fee_module">
-            <button class="btn-git">
-              <i class="fa fa-github"></i> Github
-            </button></a
-          >
+    <h1 class="text-center mt-5"><span>Projects</span></h1>
+    <main class="container d-flex justify-content-center align-items-center" >
+      <div class="row">
+        <div class="col-sm-6 mb-3">
+          <section class="projectcard">
+            <div class="project-image">
+              <img
+                src="./images/fee_mgmt_pic.svg "
+                alt="Card image notes"
+                class="project-image"
+              />
+            </div>
+            <div class="project-content">
+              <h3>Fee Management App</h3>
+              <p>Tech Stack:</p>
+              <p>
+                <span class="tech-stack">Nodejs</span
+                ><span class="tech-stack">Express</span
+                ><span class="tech-stack">MySQL</span
+                ><span class="tech-stack">HTML/CSS</span
+                ><span class="tech-stack">EJS</span>
+              </p>
+              <a href="https://github.com/mahajankiran/fee_module">
+                <button class="btn-git">
+                Source code
+                </button></a
+              >
+              <a href="https://mahajankiran.github.io/aircoolingindia">
+                <button class="btn-git">
+                  Live Demo
+                </button></a
+              >
+            </div>
+          </section>
         </div>
-      </section>
+        <div class="col-sm-6 mb-3">
+          <section class="projectcard">
+            <div class="project-image">
+              <img
+                src="./images/Notes.svg "
+                alt="Card image notes"
+                class="project-image"
+              />
+            </div>
 
-      <section class="projectcard">
-        <img
-          src="./images/Notes.svg "
-          alt="Card image notes"
-          class="project-image"
-        />
+            <div class="project-content">
+              <h3>Notes App</h3>
+              <p>Tech Stack:</p>
+              <p>
+                <span class="tech-stack">HTML/CSS</span
+                ><span class="tech-stack">Javascript</span>
+              </p>
 
-        <div class="project-content">
-          <h3>Notes App</h3>
-          <p>Tech Stack:</p>
-          <p>
-            <span class="tech-stack">HTML/CSS</span
-            ><span class="tech-stack">Javascript</span>
-          </p>
-
-          <a href="https://github.com/mahajankiran/Notes-App">
-            <button class="btn-git">
-              <i class="fa fa-github"></i> Github
-            </button></a
-          >
+              <a href="https://github.com/mahajankiran/Notes-App">
+                <button class="btn-git">
+                  <i class="fa fa-github"></i> Github
+                </button></a
+              >
+            </div>
+          </section>
         </div>
-      </section>
+        <div class="col-sm-6 mb-3">
+          <section class="projectcard">
+            <div class="project-image">
+              <img
+                src="./images/ACI.svg "
+                alt="Card image notes"
+                class="project-image"
+              />
+            </div>
 
-      <section class="projectcard">
-        <img
-          src="./images/ACI.svg "
-          alt="Card image notes"
-          class="project-image"
-        />
+            <div class="project-content">
+              <h3>Air Cooiling India Portfolio</h3>
+              <p>Tech Stack:</p>
+              <p>
+                <span class="tech-stack">HTML/CSS</span
+                ><span class="tech-stack">Javascript</span>
+              </p>
 
-        <div class="project-content">
-          <h3>Air Cooiling India Portfolio</h3>
-          <p>Tech Stack:</p>
-          <p>
-            <span class="tech-stack">HTML/CSS</span
-            ><span class="tech-stack">Javascript</span>
-          </p>
-
-          <a href="https://github.com/mahajankiran/aircoolingindia">
-            <button class="btn-git">
-              <i class="fa fa-github"></i> Github
-            </button></a
-          >
+              <a href="https://github.com/mahajankiran/aircoolingindia">
+                <button class="btn-git">
+                  <i class="fa fa-github"></i> Github
+                </button></a
+              >
+            </div>
+          </section>
         </div>
-      </section>
+      </div>
     </main>
 
     <p class="text-center text-white mb-3">
