--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light" data-aos="fade-down">
-      <span  class="title" href="#">Kiran Mahajan</span>
+      <span class="title" href="#">Kiran Mahajan</span>
       <button
         class="navbar-toggler"
         type="button"
@@ -36,9 +36,7 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="education.html">Education</a>
-          </li>
+
           <li class="nav-item">
             <a class="nav-link" href="projects.html">Projects</a>
           </li>
@@ -52,7 +50,7 @@
     <div class="circle1 d-md-block"></div>
 
     <div class="main-container">
-      <div class="portfolio-content ">
+      <div class="portfolio-content">
         <h1>Hi<span class="hello-wave">👋</span>,I am Kiran Mahajan.</h1>
         <h3>I like creating Websites,UI Designs.</h3>
       </div>
@@ -77,7 +75,13 @@
         </div>
       </div>
     </div>
-    <p class="text-center text-white mb-3">Made with <i class="fa-solid  heart-icon fa fa-heart"></i> in <img src="images/india.png" style="height:17px;width:17px;margin:0 2px;"/></p>
+    <p class="text-center text-white mb-3">
+      Made with <i class="fa-solid heart-icon fa fa-heart"></i> in
+      <img
+        src="images/india.png"
+        style="height: 17px; width: 17px; margin: 0 2px"
+      />
+    </p>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
