Changed background  of projectcard component

--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          
+
           <li class="nav-item">
             <a class="nav-link" href="projects.html">Projects</a>
           </li>
@@ -51,7 +51,7 @@
     <div class="circle1 d-md-block"></div>
 
     <h1 class="text-center mt-5"><span>Projects</span></h1>
-    <main class="container d-flex justify-content-center align-items-center" >
+    <main class="container d-flex justify-content-center align-items-center">
       <div class="row">
         <div class="col-sm-6 mb-3">
           <section class="projectcard">
@@ -73,14 +73,10 @@
                 ><span class="tech-stack">EJS</span>
               </p>
               <a href="https://github.com/mahajankiran/fee_module">
-                <button class="btn-git">
-                Source code
-                </button></a
+                <button class="btn-git">Source code</button></a
               >
               <a href="https://mahajankiran.github.io/aircoolingindia">
-                <button class="btn-git">
-                  Live Demo
-                </button></a
+                <button class="btn-git">Live Demo</button></a
               >
             </div>
           </section>
@@ -102,11 +98,11 @@
                 <span class="tech-stack">HTML/CSS</span
                 ><span class="tech-stack">Javascript</span>
               </p>
-
+              <a href="https://github.com/mahajankiran/fee_module">
+                <button class="btn-git">Source code</button></a
+              >
               <a href="https://github.com/mahajankiran/Notes-App">
-                <button class="btn-git">
-                  <i class="fa fa-github"></i> Github
-                </button></a
+                <button class="btn-git">Github</button></a
               >
             </div>
           </section>
@@ -128,11 +124,12 @@
                 <span class="tech-stack">HTML/CSS</span
                 ><span class="tech-stack">Javascript</span>
               </p>
+              <a href="https://github.com/mahajankiran/fee_module">
+                <button class="btn-git">Source code</button></a
+              >
 
               <a href="https://github.com/mahajankiran/aircoolingindia">
-                <button class="btn-git">
-                  <i class="fa fa-github"></i> Github
-                </button></a
+                <button class="btn-git">Github</button></a
               >
             </div>
           </section>
