Added live demo button to project card component

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light" data-aos="fade-down">
-      <span  class="title" href="#">Kiran Mahajan</span>
+      <span class="title" href="#">Kiran Mahajan</span>
       <button
         class="navbar-toggler"
         type="button"
@@ -84,25 +84,25 @@
     <h2 class="mt-5 text-center header">Contact me</h2>
     <div class="container d-flex align-items-center justify-content-center">
       <div class="row mt-3 d-flex justify-content-center align-items-center">
-        <div class="col-sm-12  d-flex justify-content-center align-items-center">
+        <div class="col-sm-12 d-flex justify-content-center align-items-center">
           <ul class="contact-list">
             <li>
               <a
                 href="https://www.linkedin.com/in/mahajankiran020"
                 target="_blank"
               >
-                <i class="icons  linkedin-icon fa-brands fa fa-linkedin"></i
+                <i class="icons linkedin-icon fa-brands fa fa-linkedin"></i
               ></a>
             </li>
 
             <li>
               <a href="mailto:mahajankiran020@gmail.com" target="_blank">
-                <i class="fa-brands mail-icon  icons fa fa-envelope"></i
+                <i class="fa-brands mail-icon icons fa fa-envelope"></i
               ></a>
             </li>
             <li>
               <a href="https://github.com/mahajankiran" target="_blank">
-                <i class="icons  github-icon fa-brands fa fa-github"></i
+                <i class="icons github-icon fa-brands fa fa-github"></i
               ></a>
             </li>
             <li>
@@ -110,21 +110,21 @@
                 href="https://www.instagram.com/kiran.mahajan.28/"
                 target="_blank"
               >
-                <i class=" icons instagram-icon fa-brands fa fa-instagram"></i
+                <i class="icons instagram-icon fa-brands fa fa-instagram"></i
               ></a>
             </li>
           </ul>
         </div>
-        <div class=" col-sm-10 mt-3 d-flex justify-content-center align-items-center ">
-          
-          <input  type="text" placeholder="Type your message here" />
+        <div
+          class="col-sm-10 mt-3 d-flex justify-content-center align-items-center"
+        >
+          <input type="text" placeholder="Type your message here" />
           <a><i class="fa-solid send-icon icons fa fa-arrow-right"></i></a>
-          
         </div>
       </div>
     </div>
 
-    <p class="text-center text-white mt-4 ">
+    <p class="text-center text-white mt-4">
       Made with <i class="fa-solid heart-icon fa fa-heart"></i> in
       <img
         src="images/india.png"
