--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
                 <button class="btn-git">Source code</button></a
               >
               <a href="https://github.com/mahajankiran/Notes-App">
-                <button class="btn-git">Github</button></a
+                <button class="btn-git">Live Demo</button></a
               >
             </div>
           </section>
@@ -124,12 +124,12 @@
                 <span class="tech-stack">HTML/CSS</span
                 ><span class="tech-stack">Javascript</span>
               </p>
-              <a href="https://github.com/mahajankiran/fee_module">
+              <a href="https://github.com/mahajankiran/aircoolingindia">
                 <button class="btn-git">Source code</button></a
               >
 
-              <a href="https://github.com/mahajankiran/aircoolingindia">
-                <button class="btn-git">Github</button></a
+              <a  href="https://mahajankiran.github.io/aircoolingindia">
+                <button class="btn-git">Live Demo</button></a
               >
             </div>
           </section>
