Added rotating animation to profile image

--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,7 @@
                 border: solid 10px #b2d4dd;
               "
               src="images/profileimage.jpeg"
+              class="profileimage"
             />
           </div>
           <div class="col-sm-12 col-md-6 col-lg-6 mt-5">
