Added experience section to the portfolio

--- a/experience.html
+++ b/experience.html
@@ -19,7 +19,8 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light" data-aos="fade-down">
-      <!-- <span class="title" href="#">Kiran Mahajan</span> -->
+      <span class="title" href="#">Kiran Mahajan</span>
+
       <button
         class="navbar-toggler"
         type="button"
@@ -36,10 +37,11 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-
+          
           <li class="nav-item">
             <a class="nav-link" href="experience.html">Experience</a>
           </li>
+
           <li class="nav-item">
             <a class="nav-link" href="projects.html">Projects</a>
           </li>
@@ -52,33 +54,18 @@
 
     <div class="circle1 d-md-block"></div>
 
-    <div class="main-container">
-      <div class="portfolio-content">
-        <h1>Hi<span class="hello-wave">👋</span>,I am Kiran Mahajan.</h1>
-        <h3>I like creating Websites,UI Designs.</h3>
-      </div>
-      <div class="portfolio-image">
-        <img src="./images/landingpagesvg.svg" alt="landingsvg" />
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div
-          class="mb-3 col-sm-12 d-flex justify-content-center align-items-center"
-        >
-          <h3 class="header">Download my Resume</h3>
+    <section id="experience">
+        <div class="experience-item">
+            <h3>Associate Software Engineer</h3>
+            <p class="company">NICE Actimize | July 2022 – August 2024</p>
+            <ul>
+                <li>Orchestrated Docker containerization for QAS product, reducing deployment time by 40%.</li>
+                <li>Developed reusable UI widgets using Vue.js, improving development speed.</li>
+                <li>Implemented Azure AD support, enhancing authentication security and efficiency.</li>
+                <li>Identified and fixed critical SSRF and XSS vulnerabilities, preventing potential data breaches.</li>
+            </ul>
         </div>
-
-        <div
-          class="mb-3 col-sm-12 d-flex justify-content-center align-items-center"
-        >
-          <a href="Kiran-Suresh-Mahajan-CV.pdf" download
-            ><i class="fa-solid fa icons download-icons fa-download"></i
-          ></a>
-        </div>
-      </div>
-    </div>
-    
+    </section>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
