--- a/contact.html
+++ b/contact.html
@@ -41,9 +41,15 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="experience.html">Experience</a>
+          </li>
+
           <li class="nav-item">
             <a class="nav-link" href="projects.html">Projects</a>
           </li>
+          
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
@@ -124,14 +130,6 @@
         </div>
       </div>
     </div>
-
-    <p class="text-center text-white mt-4">
-      Made with <i class="fa-solid heart-icon fa fa-heart"></i> in
-      <img
-        src="images/india.png"
-        style="height: 17px; width: 17px; margin: 0 2px"
-      />
-    </p>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
