--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,9 @@
           </li>
 
           <li class="nav-item">
+            <a class="nav-link" href="experience.html">Experience</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="projects.html">Projects</a>
           </li>
           <li class="nav-item">
@@ -134,13 +137,6 @@
       </div>
     </main>
 
-    <p class="text-center text-white mb-3">
-      Made with <i class="fa-solid heart-icon fa fa-heart"></i> in
-      <img
-        src="images/india.png"
-        style="height: 17px; width: 17px; margin: 0 2px"
-      />
-    </p>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
